# deep-evidence-agent

./: .gitignore  AGENTS.md  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json  skills-lock.json  tsconfig.base.json  turbo.json
apps/desktop/: README.md  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/src/: main.tsx  (+1 more)
apps/desktop/src-tauri/: Cargo.toml  README.md  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
docs/: FINAL_PLAN.md
docs/architecture/: README.md  cli-first-evidence-compiler-implementation-checklist.md  compile-progress-implementation-checklist.md  incremental-compile-new-documents-implementation-checklist.md  langchain-xai-phase-1-implementation-checklist.md  litellm-logging-worker-runtime-warning-fix-plan.md  milestone-2-compilation-plan.md  pydanticai-xai-phase-1-implementation-checklist.md  source-summary-evidence-refactor-implementation-checklist.md  watch-mode-implementation-checklist.md
docs/decisions/: README.md
docs/product/: README.md
docs/prompts/: README.md
services/brain-service/: pyproject.toml
services/brain-service/src/brain_service/: __init__.py  main.py  watch_manager.py
services/evidence-compiler/: pyproject.toml
services/evidence-compiler/src/evidence_compiler/: __init__.py  api.py  config.py  credentials.py  models.py  providers.py  watcher.py
services/evidence-compiler/src/evidence_compiler/cli/: __init__.py  __main__.py
services/evidence-compiler/src/evidence_compiler/compiler/: __init__.py  evidence.py  llm.py  models.py  pages.py  pipeline.py  planning.py  summaries.py
services/evidence-compiler/src/evidence_compiler/converter/: __init__.py  pipeline.py
services/evidence-compiler/src/evidence_compiler/indexer/: __init__.py
services/evidence-compiler/src/evidence_compiler/lint/: __init__.py  structural.py
services/evidence-compiler/src/evidence_compiler/prompts/: __init__.py
services/evidence-compiler/src/evidence_compiler/schema/: __init__.py  workspace.py
services/evidence-compiler/src/evidence_compiler/state/: __init__.py  registry.py
services/shared/knowledge-models/: pyproject.toml
services/shared/knowledge-models/src/knowledge_models/: __init__.py  compiler_api.py  conflicts.py  documents.py  evidence.py  jobs.py  pages.py  workspaces.py
services/shared/pageindex-adapter/: pyproject.toml
services/shared/pageindex-adapter/src/pageindex_adapter/: __init__.py  client.py  models.py  retrieval.py
tests/e2e/: README.md
tests/integration/: README.md  test_milestone_a.py
