[project]
name = "brain-service"
version = "0.1.0"
description = "Runtime API service for Evidence Brain"
requires-python = ">=3.11"
dependencies = [
  "evidence-compiler",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "aiosqlite>=0.20.0",
  "deepagents>=0.5.3",
  "langchain>=1.2.15",
  "langchain-core>=1.2.27",
  "langchain-openai>=0.3.0"
]

[project.scripts]
brain-service = "brain_service.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brain_service"]
