[package]
name = "evidence-brain-desktop"
version = "0.1.0"
description = "Evidence Brain desktop shell"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
