[project]
name = "knowledge-models"
version = "0.1.0"
description = "Shared domain models for Evidence Brain"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.9.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_models"]
