[project]
name = "pageindex-adapter"
version = "0.1.0"
description = "Adapter package for stable PageIndex integration"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.9.0",
  "PyPDF2>=3.0.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pageindex_adapter"]
